[tool.poetry]
name = "the-matrix-loading"
version = "1.0.0"
description = "Loading Programs - Package Management Demonstration"
authors = ["Data Architect <architect@zion.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
matrix-load = "loading:main"
